--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-	"name": "datocms-plugin-preview-buttons",
-	"version": "0.1.0",
-	"private": true,
+	"name": "datocms-plugin-advanced-preview-buttons",
+	"version": "1.0.0",
+	"author": "DanMB",
 	"dependencies": {
 		"@hello-pangea/dnd": "^16.6.0",
-		"@types/node": "^18.19.32",
-		"@types/react": "^18.3.1",
-		"@types/react-dom": "^18.3.0",
 		"datocms-plugin-sdk": "^0.7.15",
 		"datocms-react-ui": "^0.7.15",
-		"lodash": "^4.17.21",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-scripts": "5.0.1",
-		"typescript": "^4.9.5"
+		"react-scripts": "5.0.1"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.17.1",
-		"cross-env": "^7.0.3"
+		"@types/react": "^18.3.1",
+		"@types/react-dom": "^18.3.0",
+		"cross-env": "^7.0.3",
+		"typescript": "^4.9.5"
 	},
 	"scripts": {
 		"start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
 		"build": "cross-env PUBLIC_URL='.' react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
 		"prepublishOnly": "npm run build"
 	},
 	"datoCmsPlugin": {
-		"title": "",
+		"title": "Advanced Preview Buttons",
 		"previewImage": "",
 		"coverImage": "",
 		"entryPoint": "build/index.html"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
