--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "datocms-plugin-advanced-preview-buttons",
-	"version": "0.1.4",
+	"version": "0.2.0",
 	"author": "DanMB",
 	"homepage": "https://github.com/DanMB/datocms-plugin-advanced-preview-buttons",
 	"description": "Custom preview buttons using advanced reactive values",
@@ -11,23 +11,23 @@
 		"permissions": []
 	},
 	"scripts": {
-		"start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
-		"build": "cross-env PUBLIC_URL='.' react-scripts build",
-		"prepublishOnly": "npm run build"
+		"dev": "vite dev",
+		"build": "vite build",
+		"prepublishOnly": "vite build"
 	},
 	"dependencies": {
 		"@hello-pangea/dnd": "^16.6.0",
-		"datocms-plugin-sdk": "^0.7.15",
-		"datocms-react-ui": "^0.7.15",
+		"datocms-plugin-sdk": "^1.0.2",
+		"datocms-react-ui": "^1.0.2",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-scripts": "5.0.1"
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.1",
 		"@types/react-dom": "^18.3.0",
-		"cross-env": "^7.0.3",
-		"typescript": "^4.9.5"
+		"@vitejs/plugin-react": "^4.2.1",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.11"
 	},
 	"browserslist": {
 		"production": [">0.2%", "not dead", "not op_mini all"],
